# labelprinter-vc500w

./: .gitignore  AGENTS.md  INSTALL.md  QUICKSTART.md  README.md  config.example.json  flake.nix  get_printer_ip.sh  justfile  labelprinter.sh  print_text.py  pyproject.toml  setup_printer.py
labelprinter/: __init__.py  __main__.py  connection.py  print_text.py  printer.py  queue_manager.py  queue_setup.py  queue_worker.py
labelprinter/test/: __init__.py  test_printer.py
